jsp연동누락분

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -19,5 +19,7 @@
     스프링 부트 반가웡!
 
     <button onclick="BTN_REST_click()">REST 테스트</button>
+
+    <textarea id="contents"></textarea>
 </body>
 </html>
